tests/checker/diagnostics/0398_optional_argument_call_mismatch_10.ml.infer.expected
File "0398_optional_argument_call_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0398_optional_argument_call_mismatch_10 is not a valid module name.

File "0398_optional_argument_call_mismatch_10.ml", line 3, characters 21-25:
3 | let _ = add_kappa ~x:true 10
                         ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
